--- a/src/frontend/record.html
+++ b/src/frontend/record.html
@@ -130,31 +130,61 @@
     <script src="nav.js"></script>
     <script src="frequency.js"></script>
 
-    <!-- MusicXML Params Modal -->
-    <div id="musicxmlModal" class="modal" style="display: none;">
+    <div class="modal" id="musicxmlModal">
         <div class="modal-content">
-            <h2>Enter MusicXML Parameters</h2>
-            <form id="musicxmlForm">
-                <label for="workNumber">Work Number:</label>
-                <input type="text" id="workNumber" name="workNumber" required /><br />
-                <label for="workTitle">Work Title:</label>
-                <input type="text" id="workTitle" name="workTitle" required /><br />
-                <label for="movementNumber">Movement Number:</label>
-                <input type="text" id="movementNumber" name="movementNumber" required /><br />
-                <label for="movementTitle">Movement Title:</label>
-                <input type="text" id="movementTitle" name="movementTitle" required /><br />
-                <label for="creatorName">Creator Name:</label>
-                <input type="text" id="creatorName" name="creatorName" required /><br />
-                <label for="creatorType">Creator Type:</label>
-                <input type="text" id="creatorType" name="creatorType" required /><br />
-
-                <div style="display: flex; gap: 10px; justify-content: flex-end; margin-top: 20px;">
-                    <button type="button" id="modalClose" class="btn btn-stop">Close</button>
-                    <button type="submit" class="btn btn-play">Generate MusicXML</button>
+          <div class="modal-header">
+            <h2 id="musicxmlModalLabel">Configure Score Sheet</h2>
+            <button id="modalClose" class="modal-close-btn">&times;</button>
+          </div>
+          <form id="musicxmlForm">
+            <div class="modal-body">
+            <!-- Creator Information -->
+            <fieldset class="modal-fieldset">
+                <legend>Creator Information</legend>
+                <div class="form-group">
+                <label for="creatorName">Creator Name</label>
+                <input type="text" id="creatorName" name="creatorName" placeholder="Enter your name" required>
                 </div>
-            </form>
+            </fieldset>
+            <!-- Score Details -->
+            <fieldset class="modal-fieldset">
+                <legend>Score Details</legend>
+                <div class="form-group">
+                <label for="instrumentInput">Instrument</label>
+                <input type="text" id="instrumentInput" name="instrument" placeholder="Enter instrument name (e.g., Piano, Violin)" required>
+                </div>
+                <div class="form-group">
+                <label for="timeSignatureInput">Time Signature</label>
+                <input type="text" id="timeSignatureInput" name="timeSignature" placeholder="Enter a time signature (e.g., 4/4, 3/4)" required pattern="^\d+\/\d+$" title="Please enter a valid time signature (e.g., 4/4)">
+                </div>
+            </fieldset>
+             <!-- Score Metadata -->
+            <fieldset class="modal-fieldset">
+                <legend>Score Metadata</legend>
+                <div class="form-group">
+                <label for="workNumber">Work Number</label>
+                <input type="text" id="workNumber" name="workNumber" placeholder="Enter work number" required>
+                </div>
+                <div class="form-group">
+                <label for="workTitle">Work Title</label>
+                <input type="text" id="workTitle" name="workTitle" placeholder="Enter work title" required>
+                </div>
+                <div class="form-group">
+                <label for="movementNumber">Movement Number</label>
+                <input type="text" id="movementNumber" name="movementNumber" placeholder="Enter movement number" required>
+                </div>
+                <div class="form-group">
+                <label for="movementTitle">Movement Title</label>
+                <input type="text" id="movementTitle" name="movementTitle" placeholder="Enter movement title" required>
+                </div>
+            </fieldset>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-cancel" id="modalCancel">Cancel</button>
+              <button type="submit" class="btn btn-enter">Generate Score Sheet</button>
+            </div>
+          </form>
         </div>
-    </div>
-
+      </div>      
 </body>
 </html>
